--- a/index.html
+++ b/index.html
@@ -14,11 +14,30 @@
 </head>
 <body>
     <main>
-        <div class="conteiner">
+       <div class="conteiner">
         <h1>Meet Our Team</h1>
         <p id="intro">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, repudiandae dicta! Libero maiores nostrum voluptates, qui laudantium enim repellat? Ut ab sint ratione nobis a!</p>
-       </div>
+        <div class="conteiner-clearfix">
+            <div class="riquadro">
+                <img src="img/male1.png" alt="">
+            </div>
+            <div class="riquadro">
+                <img src="img/female1.png" alt="">
 
+            </div>
+            <div class="riquadro">
+                <img src="img/male2.png" alt="">
+            </div>
+            <div class="riquadro">
+                <img src="img/female2.png" alt="">
+            </div>
+            <div class="riquadro">
+                <img src="img/male3.png" alt="">
+            </div>
+            <div class="riquadro">
+                <img src="img/female3.png" alt="">
+            </div>
+        </div>
     </main>
 
 </body>
