problema p che non va a capo

--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
             <div class="riquadro">
                 <img src="img/male1.png" alt="">
                 <h2>MARCO BIANCHI</h2>
+                <p class="manzione">Designer</p>
                 
             </div>
             <div class="riquadro">
                 <img src="img/female1.png" alt="">
                 <h2>LAURA ROSSI</h2>
-                <
+                
 
             </div>
             <div class="riquadro">
